--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -126,6 +126,8 @@ blockquote {
 /* links */
 
 a {
+  /* remove underline of a link */
+  text-decoration: none;
   &:focus {
     @extend %tab-focus;
   }
