--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -22,5 +22,7 @@ layout: default
       <h1 id="page-title" class="page__title">{{ page.title }}</h1>
     {% endunless %}
     {{ content }}
+    {% include paginator.html %}
   </div>
 </div>
+
