--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -3,7 +3,12 @@
    ========================================================================== */
 
 .masthead {
-  position: relative;
+  /* position: relative; */
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: $masthead-height;
+
   border-bottom: 1px solid $border-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
@@ -25,6 +30,9 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     font-family: $sans-serif-narrow;
+    
+    background-color: #fff;
+
     /* add properties */
     font-size: $type-size-4;
     font-weight: bold;
