--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -6,6 +6,8 @@
   @include clearfix;
   margin-left: auto;
   margin-right: auto;
+  padding-top: $masthead-height;
+  
   padding-left: 1em;
   padding-right: 1em;
   -webkit-animation: $intro-transition;
