--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -8,6 +8,9 @@
 
 .sidebar {
   @include clearfix();
+  
+  padding-top: $masthead-height;
+
   @include breakpoint(max-width $large) {
     /* fix z-index order of follow links */
     position: relative;
